# tix

./: .tix.toml  Cargo.toml  LICENSE  README.md  SPEC.md
.github/workflows/: ci.yml
scripts/: smoke.sh
src/: cli.rs  lib.rs  main.rs
src/commands/: clear_ticket.rs  config_cmd.rs  doctor.rs  init.rs  mod.rs  pr.rs  protect.rs  set_ticket.rs  show.rs  start.rs  ticket.rs  uninstall.rs
src/config/: mod.rs
src/git/: mod.rs
src/hooks/: mod.rs  pre_commit.rs  pre_push.rs  prepare_commit_msg.rs
src/state/: mod.rs
src/util/: glob.rs  mod.rs  paths.rs  prompt.rs  slug.rs  ticket.rs
tasks/: plan.md  todo.md
tests/: cli.rs  config_cmd.rs  doctor.rs  git.rs  init.rs  pr.rs  pre_commit.rs  pre_push.rs  prepare_commit_msg.rs  protect.rs  retroactive_amend.rs  show.rs  start.rs  ticket_state.rs  ticket_url.rs
tests/common/: mod.rs
