[package]
name = "tix-git"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Corporate git workflow assistant — ticket-prefix discipline and branch protection."
repository = "https://github.com/ObieMunoz/tix"
publish = false

[[bin]]
name = "tix"
path = "src/main.rs"

[dependencies]
anstream = "0.6"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
dirs = "5"
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
